2324.	[bug]		Fix IPv6 matching against "any;" [RT #17533]

2323.	[port]		tru64: namespace clash. [RT #17547]

2322.	[port]		MacOS: work around the limitation of setrlimit()
			for RLIMIT_NOFILE. [RT #17526]

2321.	[placeholder]

2320.	[func]		Make statistics couters thread-safe for platforms
			that support certain atomic operations. [RT #17466]

2319.	[bug]		Silence Coverity warnings in 
			lib/dns/rdata/in_1/apl_42.c. [RT #17469]

2318.	[port]		sunos fixes for libbind.  [RT #17514]

2317.	[bug]		"make distclean" removed bind9.xsl.h. [RT #17518]

2316.	[port]		Missing #include <isc/print.h> in lib/dns/gssapictx.c.
			[RT #17513]

2315.   [bug]           Used incorrect address family for mapped IPv4
                        addresses in acl.c. [RT #17519]

2314.	[bug]		Uninitialized memory use on error path in
			bin/named/lwdnoop.c.  [RT #17476]

2313.	[cleanup]	Silence Coverity warnings. Handle private stacks.
			[RT #17447] [RT #17478]

2312.	[cleanup]	Silence Coverity warning in lib/isc/unix/socket.c.
			[RT #17458]

2311.   [bug]           IPv6 addresses could match IPv4 ACL entries and
                        vice versa. [RT #17462]

2310.	[bug]		dig, host, nslookup: flush stdout before emitting
			debug/fatal messages.  [RT #17501]

2309.   [cleanup]       Fix Coverity warnings in lib/dns/acl.c and iptable.c.
                        [RT #17455]

2308.	[cleanup]	Silence Coverity warning in bin/named/controlconf.c.
			[RT #17495]

2307.	[bug]		Remove infinite loop from lib/dns/sdb.c. [RT #17496]

2306.	[bug]		Remove potential race from lib/dns/resolver.c.
			[RT #17470]

2305.	[security]	inet_network() buffer overflow. CVE-2008-0122.

2304.	[bug]		Check returns from all dns_rdata_tostruct() calls.
			[RT #17460]

2303.	[bug]		Remove unnecessary code from bin/named/lwdgnba.c.
			[RT #17471]

2302.	[bug]		Fix memset() calls in lib/tests/t_api.c. [RT #17472]

2301.	[bug]		Remove resource leak and fix error messages in