@@ -1,3 +1,5 @@
+2325.	[port]		Linux: use capset() function if available. [RT #17557]
+
 2324.	[bug]		Fix IPv6 matching against "any;" [RT #17533]
 
 2323.	[port]		tru64: namespace clash. [RT #17547]
